lib/ffi/generated_bindings.dart


  late final _BASS_SampleCreatePtr = _lookup<
      ffi.NativeFunction<
          HSAMPLE Function(
              DWORD, DWORD, DWORD, DWORD, DWORD)>>('BASS_SampleCreate');
  late final _BASS_SampleCreate =
      _BASS_SampleCreatePtr.asFunction<int Function(int, int, int, int, int)>();

  int BASS_SampleFree(
    int handle,
  ) {
    return _BASS_SampleFree(
      handle,
    );
  }

  late final _BASS_SampleFreePtr =
      _lookup<ffi.NativeFunction<BOOL Function(HSAMPLE)>>('BASS_SampleFree');
  late final _BASS_SampleFree =
      _BASS_SampleFreePtr.asFunction<int Function(int)>();

  int BASS_SampleSetData(
    int handle,
    ffi.Pointer<ffi.Void> buffer,
  ) {
    return _BASS_SampleSetData(
      handle,
      buffer,
    );
  }

  late final _BASS_SampleSetDataPtr = _lookup<
          ffi.NativeFunction<BOOL Function(HSAMPLE, ffi.Pointer<ffi.Void>)>>(
      'BASS_SampleSetData');
  late final _BASS_SampleSetData = _BASS_SampleSetDataPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>)>();

  int BASS_SampleGetData(
    int handle,
    ffi.Pointer<ffi.Void> buffer,
  ) {
    return _BASS_SampleGetData(
      handle,
      buffer,
    );
  }

  late final _BASS_SampleGetDataPtr = _lookup<
          ffi.NativeFunction<BOOL Function(HSAMPLE, ffi.Pointer<ffi.Void>)>>(
      'BASS_SampleGetData');
  late final _BASS_SampleGetData = _BASS_SampleGetDataPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>)>();

  int BASS_SampleGetInfo(
    int handle,
    ffi.Pointer<BASS_SAMPLE> info,
  ) {
    return _BASS_SampleGetInfo(
      handle,
      info,
    );
  }

  late final _BASS_SampleGetInfoPtr = _lookup<
          ffi.NativeFunction<BOOL Function(HSAMPLE, ffi.Pointer<BASS_SAMPLE>)>>(
      'BASS_SampleGetInfo');
  late final _BASS_SampleGetInfo = _BASS_SampleGetInfoPtr.asFunction<
      int Function(int, ffi.Pointer<BASS_SAMPLE>)>();

  int BASS_SampleSetInfo(
    int handle,
    ffi.Pointer<BASS_SAMPLE> info,
  ) {
    return _BASS_SampleSetInfo(
      handle,
      info,
    );
  }

  late final _BASS_SampleSetInfoPtr = _lookup<
          ffi.NativeFunction<BOOL Function(HSAMPLE, ffi.Pointer<BASS_SAMPLE>)>>(
      'BASS_SampleSetInfo');
  late final _BASS_SampleSetInfo = _BASS_SampleSetInfoPtr.asFunction<
      int Function(int, ffi.Pointer<BASS_SAMPLE>)>();

  int BASS_SampleGetChannel(
    int handle,
    int flags,
  ) {
    return _BASS_SampleGetChannel(
      handle,
      flags,
    );
  }

  late final _BASS_SampleGetChannelPtr =
      _lookup<ffi.NativeFunction<DWORD Function(HSAMPLE, DWORD)>>(
          'BASS_SampleGetChannel');
  late final _BASS_SampleGetChannel =
      _BASS_SampleGetChannelPtr.asFunction<int Function(int, int)>();

  int BASS_SampleGetChannels(
    int handle,
    ffi.Pointer<HCHANNEL> channels,
  ) {
    return _BASS_SampleGetChannels(
      handle,
      channels,
    );
  }

  late final _BASS_SampleGetChannelsPtr = _lookup<
          ffi.NativeFunction<DWORD Function(HSAMPLE, ffi.Pointer<HCHANNEL>)>>(
      'BASS_SampleGetChannels');
  late final _BASS_SampleGetChannels = _BASS_SampleGetChannelsPtr.asFunction<
      int Function(int, ffi.Pointer<HCHANNEL>)>();

  int BASS_SampleStop(
    int handle,
  ) {
    return _BASS_SampleStop(
      handle,
    );
  }

  late final _BASS_SampleStopPtr =
      _lookup<ffi.NativeFunction<BOOL Function(HSAMPLE)>>('BASS_SampleStop');
  late final _BASS_SampleStop =
      _BASS_SampleStopPtr.asFunction<int Function(int)>();

  int BASS_StreamCreate(
    int freq,
    int chans,
    int flags,
    ffi.Pointer<STREAMPROC> proc,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _BASS_StreamCreate(
      freq,
      chans,
      flags,
      proc,
      user,
    );
  }

  late final _BASS_StreamCreatePtr = _lookup<
      ffi.NativeFunction<
          HSTREAM Function(DWORD, DWORD, DWORD, ffi.Pointer<STREAMPROC>,
              ffi.Pointer<ffi.Void>)>>('BASS_StreamCreate');
  late final _BASS_StreamCreate = _BASS_StreamCreatePtr.asFunction<
      int Function(
          int, int, int, ffi.Pointer<STREAMPROC>, ffi.Pointer<ffi.Void>)>();

  int BASS_StreamCreateFile(
    int mem,
    ffi.Pointer<ffi.Void> file,
    int offset,
    int length,
    int flags,
  ) {
    return _BASS_StreamCreateFile(
      mem,
      file,
      offset,
      length,
      flags,
    );
  }

  late final _BASS_StreamCreateFilePtr = _lookup<
      ffi.NativeFunction<
          HSTREAM Function(BOOL, ffi.Pointer<ffi.Void>, QWORD, QWORD,
              DWORD)>>('BASS_StreamCreateFile');
  late final _BASS_StreamCreateFile = _BASS_StreamCreateFilePtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>, int, int, int)>();

  int BASS_StreamCreateURL(
    ffi.Pointer<ffi.Int8> url,
    int offset,
    int flags,
    ffi.Pointer<DOWNLOADPROC> proc,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _BASS_StreamCreateURL(
      url,
      offset,
      flags,
      proc,
      user,
    );
  }

  late final _BASS_StreamCreateURLPtr = _lookup<
      ffi.NativeFunction<
          HSTREAM Function(
              ffi.Pointer<ffi.Int8>,
              DWORD,
              DWORD,
              ffi.Pointer<DOWNLOADPROC>,
              ffi.Pointer<ffi.Void>)>>('BASS_StreamCreateURL');
  late final _BASS_StreamCreateURL = _BASS_StreamCreateURLPtr.asFunction<
      int Function(ffi.Pointer<ffi.Int8>, int, int, ffi.Pointer<DOWNLOADPROC>,
          ffi.Pointer<ffi.Void>)>();

  int BASS_StreamCreateFileUser(
    int system,
    int flags,
    ffi.Pointer<BASS_FILEPROCS> proc,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _BASS_StreamCreateFileUser(
      system,
      flags,
      proc,
      user,
    );
  }

  late final _BASS_StreamCreateFileUserPtr = _lookup<
      ffi.NativeFunction<
          HSTREAM Function(DWORD, DWORD, ffi.Pointer<BASS_FILEPROCS>,
              ffi.Pointer<ffi.Void>)>>('BASS_StreamCreateFileUser');
  late final _BASS_StreamCreateFileUser =
      _BASS_StreamCreateFileUserPtr.asFunction<
          int Function(
              int, int, ffi.Pointer<BASS_FILEPROCS>, ffi.Pointer<ffi.Void>)>();

  int BASS_StreamFree(
    int handle,
  ) {
    return _BASS_StreamFree(
      handle,
    );
  }

  late final _BASS_StreamFreePtr =
      _lookup<ffi.NativeFunction<BOOL Function(HSTREAM)>>('BASS_StreamFree');
  late final _BASS_StreamFree =
      _BASS_StreamFreePtr.asFunction<int Function(int)>();

  int BASS_StreamGetFilePosition(
    int handle,
    int mode,
  ) {
    return _BASS_StreamGetFilePosition(
      handle,
      mode,
    );
  }

  late final _BASS_StreamGetFilePositionPtr =
      _lookup<ffi.NativeFunction<QWORD Function(HSTREAM, DWORD)>>(
          'BASS_StreamGetFilePosition');
  late final _BASS_StreamGetFilePosition =
      _BASS_StreamGetFilePositionPtr.asFunction<int Function(int, int)>();

  int BASS_StreamPutData(
    int handle,
    ffi.Pointer<ffi.Void> buffer,
    int length,
  ) {
    return _BASS_StreamPutData(
      handle,
      buffer,
      length,
    );
  }

  late final _BASS_StreamPutDataPtr = _lookup<
      ffi.NativeFunction<
          DWORD Function(
              HSTREAM, ffi.Pointer<ffi.Void>, DWORD)>>('BASS_StreamPutData');
  late final _BASS_StreamPutData = _BASS_StreamPutDataPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>, int)>();

  int BASS_StreamPutFileData(
    int handle,
    ffi.Pointer<ffi.Void> buffer,
    int length,
  ) {
    return _BASS_StreamPutFileData(
      handle,
      buffer,
      length,
    );
  }

  late final _BASS_StreamPutFileDataPtr = _lookup<
      ffi.NativeFunction<
          DWORD Function(HSTREAM, ffi.Pointer<ffi.Void>,
              DWORD)>>('BASS_StreamPutFileData');
  late final _BASS_StreamPutFileData = _BASS_StreamPutFileDataPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>, int)>();

  int BASS_MusicLoad(
    int mem,
    ffi.Pointer<ffi.Void> file,
    int offset,
    int length,
    int flags,
    int freq,
  ) {
    return _BASS_MusicLoad(
      mem,
      file,
      offset,
      length,
      flags,
      freq,
    );
  }

  late final _BASS_MusicLoadPtr = _lookup<
      ffi.NativeFunction<
          HMUSIC Function(BOOL, ffi.Pointer<ffi.Void>, QWORD, DWORD, DWORD,
              DWORD)>>('BASS_MusicLoad');
  late final _BASS_MusicLoad = _BASS_MusicLoadPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>, int, int, int, int)>();

  int BASS_MusicFree(
    int handle,
  ) {
    return _BASS_MusicFree(
      handle,
    );
  }

  late final _BASS_MusicFreePtr =
      _lookup<ffi.NativeFunction<BOOL Function(HMUSIC)>>('BASS_MusicFree');
  late final _BASS_MusicFree =
      _BASS_MusicFreePtr.asFunction<int Function(int)>();

  int BASS_RecordGetDeviceInfo(
    int device,
    ffi.Pointer<BASS_DEVICEINFO> info,
  ) {
    return _BASS_RecordGetDeviceInfo(
      device,
      info,
    );
  }

  late final _BASS_RecordGetDeviceInfoPtr = _lookup<
      ffi.NativeFunction<
          BOOL Function(DWORD,
              ffi.Pointer<BASS_DEVICEINFO>)>>('BASS_RecordGetDeviceInfo');
  late final _BASS_RecordGetDeviceInfo = _BASS_RecordGetDeviceInfoPtr
      .asFunction<int Function(int, ffi.Pointer<BASS_DEVICEINFO>)>();

  int BASS_RecordInit(
    int device,
  ) {
    return _BASS_RecordInit(
      device,
    );
  }

  late final _BASS_RecordInitPtr =
      _lookup<ffi.NativeFunction<BOOL Function(ffi.Int32)>>('BASS_RecordInit');
  late final _BASS_RecordInit =
      _BASS_RecordInitPtr.asFunction<int Function(int)>();

  int BASS_RecordFree() {
    return _BASS_RecordFree();
  }

  late final _BASS_RecordFreePtr =
      _lookup<ffi.NativeFunction<BOOL Function()>>('BASS_RecordFree');
  late final _BASS_RecordFree =
      _BASS_RecordFreePtr.asFunction<int Function()>();

  int BASS_RecordSetDevice(
    int device,
  ) {
    return _BASS_RecordSetDevice(
      device,
    );
  }

  late final _BASS_RecordSetDevicePtr =
      _lookup<ffi.NativeFunction<BOOL Function(DWORD)>>('BASS_RecordSetDevice');
  late final _BASS_RecordSetDevice =
      _BASS_RecordSetDevicePtr.asFunction<int Function(int)>();

  int BASS_RecordGetDevice() {
    return _BASS_RecordGetDevice();
  }

  late final _BASS_RecordGetDevicePtr =
      _lookup<ffi.NativeFunction<DWORD Function()>>('BASS_RecordGetDevice');
  late final _BASS_RecordGetDevice =
      _BASS_RecordGetDevicePtr.asFunction<int Function()>();

  int BASS_RecordGetInfo(
    ffi.Pointer<BASS_RECORDINFO> info,
  ) {
    return _BASS_RecordGetInfo(
      info,
    );
  }

  late final _BASS_RecordGetInfoPtr =
      _lookup<ffi.NativeFunction<BOOL Function(ffi.Pointer<BASS_RECORDINFO>)>>(
          'BASS_RecordGetInfo');
  late final _BASS_RecordGetInfo = _BASS_RecordGetInfoPtr.asFunction<
      int Function(ffi.Pointer<BASS_RECORDINFO>)>();

  ffi.Pointer<ffi.Int8> BASS_RecordGetInputName(
    int input,
  ) {
    return _BASS_RecordGetInputName(
      input,
    );
  }

  late final _BASS_RecordGetInputNamePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int8> Function(ffi.Int32)>>(
          'BASS_RecordGetInputName');
  late final _BASS_RecordGetInputName = _BASS_RecordGetInputNamePtr.asFunction<
      ffi.Pointer<ffi.Int8> Function(int)>();

  int BASS_RecordSetInput(
    int input,
    int flags,
    double volume,
  ) {
    return _BASS_RecordSetInput(
      input,
      flags,
      volume,
    );
  }

  late final _BASS_RecordSetInputPtr =
      _lookup<ffi.NativeFunction<BOOL Function(ffi.Int32, DWORD, ffi.Float)>>(
          'BASS_RecordSetInput');
  late final _BASS_RecordSetInput =
      _BASS_RecordSetInputPtr.asFunction<int Function(int, int, double)>();

  int BASS_RecordGetInput(
    int input,
    ffi.Pointer<ffi.Float> volume,
  ) {
    return _BASS_RecordGetInput(
      input,
      volume,
    );
  }
